--- a/new-app/package.json
+++ b/new-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kabilangr.github.io/ReactTest"
+  "homepage": "http://kabilangr.github.io/ReactTest",
   "name": "new-app",
   "version": "0.1.0",
   "private": true,
